tests/ui/typech/return_value_call_expr.stderr
× error[LM4001]: mismatched types
   ╭─[return_value_call_expr.lm:6:12]
 5 │ fn bar() -> Int32 {
 6 │     return foo();
   ∶            ^^^^^^ expected type Int32, but found type Boolean...
 7 │ }
   ∶
 4 │
 5 │ fn bar() -> Int32 {
   ∶             ^^^^^ ...because of type defined here
 6 │     return foo();
   ╰──
   help: expected type Int32
            found type Boolean