tests/ui/typech/return_value_call_expr.lm
fn foo() -> Boolean {
    return false;
}

fn bar() -> Int32 {
    return foo();
}
